--- a/vignettes/introduction_to_fia.Rmd
+++ b/vignettes/introduction_to_fia.Rmd
@@ -4,17 +4,17 @@ author: "Jose Eduardo Meireles"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Introduction to fia}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
-  ---
+---
   
   The easiest way to get the `fia` package is to install from the bitbuket repository.
   
-  ```{r}
+```{r}
 library("devtools")
 
-#devtools::install_bitbucket("fia", "meireles")
+devtools::install_bitbucket("meireles/fia", quiet = TRUE)
 ```
 
 Now you can just load the package.
@@ -37,11 +37,9 @@ The FIA dataset is complex and composed of many different tables. There are two 
 In general, to find out what tables are available in the fia using:
 
 ```{r}
-tab = fia::list_available_tables()
+tab = fia::list_available_tables() # returns a list with the tables and states available in the dataset.
 
-# This returns a list with the tables and states available in the dataset.
-# Just for kicks, check our the header of each object in the list
-
+## Just for kicks, check our the header of each object in the list
 lapply(tab, head)
 ```
 
@@ -59,7 +57,6 @@ fia::download_fia_tables(table_names = my_table_names,
                          states = my_states,
                          destination_dir = my_output_dir,
                          list_available_tables = tab)
-
 ```
 
 
