uptake vignette and docs

--- a/vignettes/introduction_to_fia.Rmd
+++ b/vignettes/introduction_to_fia.Rmd
@@ -9,44 +9,61 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
   
-  The easiest way to get the `fia` package is to install from the bitbuket repository.
+ ## Installation
+ 
+The easiest way to get the `fia` package is to install from the bitbuket repository.
   
 ```{r eval=FALSE}
 library("devtools")
 devtools::install_bitbucket("meireles/fia", quiet = TRUE)
 ```
 
-Now you can just load the package.
+## Usage
+
+For now, the main goals of the `fia` package is to programatically download FIA data, which lives lives in the FIADB webpage. 
+
+First load the `fia`  package and then checl out the default FIA url.
 
 ```{r}
+
+# Load the `fia` library
 library("fia")
-```
 
-All of the data lives in the FIADB webpage. You can see the default FIA url, simply run `url_fia()` and check the results.
-
-```{r}
+# And check out the packages' default FIA url using
 fia::url_fia()
 ```
 
-The FIA dataset is complex and composed of many different tables. There are two main types of tables, holding:
 
-- Reference Data: For instance, species names in the `REF_SPECIES` table.
-- Plot data: For example, the individual tree data in `TREE` or geometry of each plot in `PLOTGEOM`.
+The FIA dataset is complex and composed of many different tables. There are two main types of tables:
 
-In general, to find out what tables are available in the fia using:
+- Reference: These tables are prefixed `REF_`. They hold. as the name says, reference data such as species names (`REF_SPECIES`) and forest types (`REF_FOREST_TYPE`).
+
+- Data: These are tables with plot data (collected at the sites). For example, the individual tree data in `TREE` or geometry of each plot in `PLOTGEOM`. Individual tables can be obtained at the state level or for all states toguether.
+
+To find out what tables are available in the FIA, use `list_available_tables`. 
 
 ```{r}
-tab = fia::list_available_tables() # returns a list with the tables and states available in the dataset.
+# Rentrieve table names from the web
+tab = fia::list_available_tables()
 
-## Just for kicks, check our the header of each object in the list
-lapply(tab, head)
+# Kinds of tables available...
+print(tab)
+
+# So you can ckeck out the names of reference tables
+head(tab$reference_table_names)
+
+# Or plot level data tables and state names
+head(tab$data_table_names)
+head(tab$data_states)
+
+# As well as many the raw-ish matrices with table file names, modicication dates, etc...
+head(tab$reference_tables)
 ```
 
-Once you figured what data you want to grab, go ahead and download it with:
+Once you figured what data you want to grab, all you have to do is download it:
 
 ```{r eval=TRUE}
-
-# Pick tables to download. Chosen from tab$reference_table_names and tab$data_table_names
+# Pick tables to download. Chosen in this case from tab$reference_table_names and tab$data_table_names
 my_table_names =  c("REF_SPECIES",  # a reference table
                     "PLOT")         # a plot data table
 
@@ -59,6 +76,7 @@ my_states_2   = "ALL"
 # You also must provide a directory where all the files will be dumped in.
 my_output_dir = "data_test/fia/"
 
+# Start download, will probably take a while...
 fia::download_fia_tables(table_names           = my_table_names,
                          states                = my_states,
                          destination_dir       = my_output_dir,
