--- a/vignettes/introduction_to_fia.Rmd
+++ b/vignettes/introduction_to_fia.Rmd
@@ -13,17 +13,16 @@ vignette: >
 
 ### Installation
  
-The easiest way to get the `fia` package is to install from the bitbuket repository.
+The easiest way to get the `fia` package is to install from the github repository.
 
 ```{r eval=FALSE}
 library("devtools")
-
-devtools::install_bitbucket("meireles/fia", quiet = TRUE)
+devtools::install_github("meireles/fia")
 ```
 
 ### Usage
 
-The main goal of the `fia` package is to programatically download FIA data, which lives lives in the FIADB webpage. Use `url_fia()` to see the default FIA url if you're curious.
+The main goal of the `fia` package is to programatically download FIA data, which lives lives in the FIADB webpage. Use `url_fia()` to see the default FIA url.
 
 ```{r}
 # Load the `fia` library
@@ -33,7 +32,7 @@ library("fia")
 fia::url_fia()
 ```
 
-### Finding out what data is available
+### Finding what data is available
 
 The FIA dataset is complex and composed of many different tables. To find out which tables are available in the FIA, use `list_available_tables`.
 
@@ -41,7 +40,7 @@ The FIA dataset is complex and composed of many different tables. To find out wh
 # Retrieve table names from the web
 tab = fia::list_available_tables()
 
-# Kinds of tables available.
+# Types of tables available.
 print(tab)
 ```
 
@@ -60,9 +59,9 @@ There are two main types of tables:
 # Check out the names of reference tables
 head(tab$reference_table_names)
 
-# or of plot level data tables and state names
-head(tab$data_table_names)
+# or names of states or plot level data tables
 head(tab$data_states)
+head(tab$data_table_names)
 
 # You can also get a detailed desrciption of the data available in the FIA, e.g.
 head(tab$reference_tables)
@@ -75,26 +74,27 @@ Once you figured out what data you want to grab, all you have to do is download 
 
 ```{r eval=TRUE}
 
-# Pick tables to download.
+# Pick tables to download
 # Chosen from tab$reference_table_names and tab$data_table_names
 my_table_names =  c("REF_SPECIES",  # a reference table
                     "PLOT")         # a plot data table
 
-# Pick states of interest.
-# See the pssibilities in tab$data_states.
+# Pick states of interest
+# See the pssibilities in tab$data_states
 my_states     = c("NC", "MN")
 
-# Alternativelly, choose all states in the dataset.
+# Alternativelly, choose all states in the dataset
 # Thus will retrieve data in tab$data_tables_states_combined
 my_states_2   = "ALL"
 
 # You also must provide the directory where the files will be dumped in.
-my_output_dir = "data_test/fia/"
+my_output_dir = "data_test/fia"
 
 # Start download!
-#Wwill probably take a while...
+# Will probably take a while...
 fia::download_fia_tables(table_names           = my_table_names,
-                         states                = my_states,      # could have been `my_states_2`
+                         states                = my_states,
                          destination_dir       = my_output_dir,
-                         list_available_tables = tab)            # the object returned by `list_available_tables()`
+                         list_available_tables = tab, # returned by `list_available_tables()`
+                         table_format          = "zip")
 ```
